--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 <body>
  <h1>My First Heading</h1>
  <p>Hello world!</p>
+ <h2>MY GROUP MATES</h2>
+ <ul class="articles">
+     <li><a href="https://suyoatucl.github.io/INST0018_23-24_uczcsqu/">Suyo Quan</a ></li>
+     <li><a href="https://ATererer.github.io/INST0018_23-24_uczcyta/">Ariana Tan</a ></li>
+     <!-- anyway add something -->
+</ul>
 </body>
 </html>
